feat: Payment Service 구현 및 Order-Payment-Product 3-way 통합 - Payment Service 신규 구축   * PostgreSQL DB 설정 (paymentdb)   * Payment Entity (결제 정보, 상태, 승인번호)   * PG사 결제 시뮬레이션 로직   * Kafka 이벤트 발행 (PAYMENT_COMPLETED, PAYMENT_FAILED, PAYMENT_CANCELLED)   * REST API (결제 처리, 취소, 조회) - Order Service 통합   * PaymentServiceClient 추가 (WebClient 기반)   * 주문 생성 플로우: 상품조회 → 주문생성 → 재고차감 → 결제처리 → 이벤트발행   * 트랜잭션 롤백 로직 (재고/결제 실패 시 주문 삭제)   * Circuit Breaker 적용 (Resilience4j) - Product Service 수정   * 재고 업데이트 API 수정   * Order Service와 API 호환성 확보 - 테스트 완료   * 주문→재고→결제 전체 플로우 성공